# thesis

./: .gitignore  .gitmodules  LICENSE  README.md  logseq_cleaning_script.py  main.typ  render_mermaid.sh
.obsidian/: workspace.json
Mobile Scan.app/Contents/: Info.plist  document.wflow
Scan to Archive.app/Contents/: Info.plist  document.wflow
assets/: Academy_FloatingProperties_A3_1740168330256_0.edn  Köster - 2024 - Müll Eine schmutzige Geschichte der Menschheit.edn  Michael Thompson - Rubbish Theory_ The Creation and Destruction of Value-Pluto Press (2017).edn  Yates - 2011 - The Human-As-Waste, the Labor Theory of Value and Disposability in Contemporary Capitalism.edn
assets/mermaid/: archive_flowchart.mmd  polymer_classification_options.mmd  polymer_id_tree.mmd  polymer_subclasses.mmd  recycling_process.mmd  rubbish_theory_hypothesis.mmd  thermoplastics_subclasses.mmd
bibliography/: thesis.bib
code/: RunInstructions.md  archive_pipeline.py  camera_debug.py  camera_finder.py  camera_handler.py  image_analysis_pyobjc.py  logger_config.py  logseq_api.py  logseq_cleaning_script.py  marker_detect.py  pinry_handler.py  publish.sh  pyproject.toml  requirements.txt  scan.sh  success_message.py  vision_test_ocrmac.py
docs/: CNAME  thesis.html
logseq/: notes.md
logseq/.obsidian/: app.json  appearance.json  daily-notes.json  workspace.json
logseq/assets/: Academy_MeltingTemps_A3_1740170116274_0.edn  (+1 more)
logseq/journals/: 2021_05_05.md  (+21 more)
sections/: abstract.typ  appendix.typ  context.typ  discussion.typ  evaluation.typ  introduction.typ  workshop.typ
(+637 files in other folders)
