[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "arontaupe",email = "aron@petau.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytesseract (>=0.3.13,<0.4.0)",
    "pillow (>=11.1.0,<11.2.0)",
    "easyocr (>=1.7.2,<1.8.0)",
    "textstat (>=0.7.4,<0.8.0)",
    "opencv-python (>=4.11.0.86,<4.12.0.0)",
    "requests (>=2.32.3,<2.33.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
